@@ -12,7 +12,9 @@ COM_CONTACT.CATEGORIES=Categories
 # View and layout titles and descriptions
 #
 
-COM_CONTACT_CATEGORY_VIEW_DEFAULT_DESC=This view lists the contacts in a category
+COM_CONTACT_CATEGORY_VIEW_DEFAULT_DESC=This view lists the contacts in a category.
 COM_CONTACT_CATEGORY_VIEW_DEFAULT_TITLE=List Contacts in a Category
-COM_CONTACT_CONTACT_VIEW_DEFAULT_DESC=This links to the contact information for one contact
+COM_CONTACT_CONTACT_VIEW_DEFAULT_DESC=This links to the contact information for one contact.
 COM_CONTACT_CONTACT_VIEW_DEFAULT_TITLE=Single Contact
+COM_CONTACT_CATEGORIES_VIEW_DEFAULT_DESC=Shows a list of contact categories within a category.
+COM_CONTACT_CATEGORIES_VIEW_DEFAULT_TITLE=List All Contact Categories
