@@ -16,12 +16,14 @@ MENUS_VIEW_ITEMS_TITLE=Menu Manager: Menu Items
 MENUS_VIEW_MENUS_TITLE=Menu Manager: Menus
 
 MENUS_TOOLBAR_REBUILD=Rebuild
-MENUS_CHANGE_LINKTYPE=Change
+MENUS_CHANGE_LINKTYPE=Select
 
 MENUS_LAYOUT_REQUEST_VARIABLES_DESC=These are required settings added directly to the menu link.
 MENUS_LAYOUT_REQUEST_VARIABLES_LABEL=Required Settings
 MENUS_LAYOUT_BASIC_OPTIONS_LABEL=Basic Options
 MENUS_LAYOUT_ADVANCED_OPTIONS_LABEL=Advanced Options
+MENUS_LAYOUT_MENUTYPE_OPTIONS_LABEL=Menu Type Options
+
 
 MENUS_LINKTYPE_OPTIONS_LABEL=Page Options
 
@@ -47,13 +49,13 @@ MENUS_ITEM_ANCHOR_CSS_LABEL=Link CSS Style
 MENUS_ITEM_ANCHOR_TITLE_DESC=An optional, custom description for the title attribute of the menu hyperlink.
 MENUS_ITEM_ANCHOR_TITLE_LABEL=Link Title Attribute
 MENUS_ITEM_BROWSERNAV_DESC=BrowserNav Desc
-MENUS_ITEM_BROWSERNAV_LABEL=On click, open in:
+MENUS_ITEM_BROWSERNAV_LABEL=Target Window
 MENUS_BROWSERNAV_OPTION_NEW_WITHOUT_NAV=New Without Navigation
 MENUS_BROWSERNAV_OPTION_NEW_WITH_NAV=New Window With Navigation
 MENUS_BROWSERNAV_OPTION_PARENT=Parent
 
 MENUS_ITEM_HOME_DESC=Sets this menu item as the default or home page of the site. You must have a default page set at all times.
-MENUS_ITEM_HOME_LABEL=Set as Default Page
+MENUS_ITEM_HOME_LABEL=Default Page
 MENUS_ITEM_IS_DEFAULT=Is default
 MENUS_ITEM_LINK_DESC=Link Desc
 MENUS_ITEM_LINK_LABEL=Link
@@ -82,12 +84,12 @@ MENUS_ITEM_TEMPLATE_DESC=Select a specific template style for this menu item or 
 MENUS_ITEM_TEMPLATE_LABEL=Template Style
 MENUS_ITEM_TITLE_DESC=The title of the menu item that will display in the menu.
 MENUS_ITEM_TYPE_DESC=The type of link: Component, URL, Alias or Separator
-MENUS_ITEM_TYPE_LABEL=Link Type
-MENUS_ITEM_TITLE_LABEL=Link Text
+MENUS_ITEM_TYPE_LABEL=Menu Item Type
+MENUS_ITEM_TITLE_LABEL=Title
 MENUS_ITEM_PAGE_HEADING_DESC=A  heading for the page
 MENUS_ITEM_PAGE_HEADING_LABEL=Page Heading
 MENUS_MENU_ASSIGNED_DESC=Shows which menu a link will appear in.
-MENUS_MENU_ASSIGNED_LABEL= In Menu:
+MENUS_MENU_ASSIGNED_LABEL= Menu Location
 
 
 MENUS_ITEM_DETAILS=Details
@@ -123,15 +125,15 @@ JMENU_OPTION_SELECT_MENUTYPE=- Menu Type -
 MENUS_REBUILD_SUCCESS=Menu tree successfully rebuilt.
 MENUS_REBUILD_FAILED=An error occurred while rebuilding the menu tree: %s
 
-MENUS_TYPE_ALIAS=Alias or shortcut or another menu link.
-MENUS_TYPE_ALIAS_DESC=Allow this menu item point to another menu item.
+MENUS_TYPE_ALIAS=Menu Item Alias
+MENUS_TYPE_ALIAS_DESC=Create an alias to another menu item.
 MENUS_TYPE_EXTERNAL_URL=External URL
-MENUS_TYPE_EXTERNAL_URL_DESC=An external (or possibly internal) URL.
+MENUS_TYPE_EXTERNAL_URL_DESC=An external or internal URL.
 MENUS_TYPE_SEPARATOR=Text Separator
 MENUS_TYPE_SEPARATOR_DESC=A text separator.
 MENUS_TYPE_SYSTEM=System Links
 MENUS_TYPE_SYSTEM_DESC=System Desc
-
+MENUS_TYPE_CHOOSE=Select a Menu Item Type:
 
 MENUS_MODULE_SHOW_ALL=All
 MENUS_MODULE_SHOW_NONE=None
