@@ -10,5 +10,5 @@ COM_SEARCH=Search
 # View and layout titles and descriptions
 #
 
-COM_SEARCH_SEARCH_VIEW_DEFAULT_DESC=com search search view default desc
-COM_SEARCH_SEARCH_VIEW_DEFAULT_TITLE=List search results
+COM_SEARCH_SEARCH_VIEW_DEFAULT_DESC=Display search results.
+COM_SEARCH_SEARCH_VIEW_DEFAULT_TITLE=List Search Results
