@@ -9,4 +9,4 @@
 #
 
 COM_WRAPPER_WRAPPER_VIEW_DEFAULT_DESC=com wrapper wrapper view default desc
-COM_WRAPPER_WRAPPER_VIEW_DEFAULT_TITLE=Display a site in an iFrame
+COM_WRAPPER_WRAPPER_VIEW_DEFAULT_TITLE=Display a URL in an iFrame Wrapper
