@@ -19,9 +19,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	font-family: inherit;
 	vertical-align: baseline;
 }
-:focus {
-	outline: 0;
-}
+
 body {
 	line-height: 1;
 	color: black;
